Service Card component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,14 +7,7 @@
                     <div class="footer-company-info">
                         <div class="footer-company-top">
                             <a href="/" class="logo" title="PathSoft">
-                                <img
-                                    data-src="assets/img/logo-white.svg"
-                                    width="115"
-                                    height="36"
-                                    class="lazy"
-                                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                                    alt="PathSoft"
-                                />
+                                <img data-src="assets/img/logo-trans.png" width="225" height="64" class="lazy" alt="PathSoft" />
                             </a>
                             <div class="footer-company-desc">
                                 <p>
