--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import ServiceCard from "../components/ServiceCard.astro";
 ---
 
 <Layout title="Home">
@@ -40,44 +41,24 @@ import Layout from "../layouts/Layout.astro";
                             <h2>Nuestros Servicios</h2>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 item">
-                        <a href="single-services.html" class="iitem item-style">
-                            <div class="iitem-icon">
-                                <i class="material-icons material-icons-outlined md-48">corporate_fare</i>
-                            </div>
-                            <div class="iitem-icon-bg">
-                                <i class="material-icons material-icons-outlined">corporate_fare</i>
-                            </div>
-                            <h3 class="iitem-heading item-heading-large">Soluciones empresariales</h3>
-                            <div class="iitem-desc">Brindamos asesoramiento tecnológico para que automatiza sus procesos y alcance eficiencia en la gestión de sus clientes y servicios.</div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 item">
-                        <a href="single-services.html" class="iitem item-style">
-                            <div class="iitem-icon">
-                                <i class="material-icons material-icons-outlined md-48">design_services</i>
-                            </div>
-                            <div class="iitem-icon-bg">
-                                <i class="material-icons material-icons-outlined">design_services</i>
-                            </div>
-                            <h3 class="iitem-heading item-heading-large">Diseño</h3>
-                            <div class="iitem-desc">Diseños frescos y adaptables que elevarán el número de clientes y permitirán su permanencia en el mercado.</div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-12 col-12 item">
-                        <a href="single-services.html" class="iitem item-style">
-                            <div class="iitem-icon">
-                                <i class="material-icons material-icons-outlined md-48">code_off</i>
-                            </div>
-                            <div class="iitem-icon-bg">
-                                <i class="material-icons material-icons-outlined">code_off</i>
-                            </div>
-                            <h3 class="iitem-heading item-heading-large">Desarrolladores</h3>
-                            <div class="iitem-desc">
-                                Con más de 8 años de experiencias en el desarrollo de soluciones informática podrá ahorrar en gastos y tiempo con un equipo local de desarrolladores.
-                            </div>
-                        </a>
-                    </div>
+                    <ServiceCard
+                        className="col-lg-4 col-md-6 col-12 item"
+                        icon="corporate_fare"
+                        title="Soluciones empresariales"
+                        description="Brindamos asesoramiento tecnológico para que automatiza sus procesos y alcance eficiencia en la gestión de sus clientes y servicios."
+                    />
+                    <ServiceCard
+                        className="col-lg-4 col-md-6 col-12 item"
+                        icon="design_services"
+                        title="Diseño"
+                        description="Diseños frescos y adaptables que elevarán el número de clientes y permitirán su permanencia en el mercado."
+                    />
+                    <ServiceCard
+                        className="col-lg-4 col-md-12 col-12 item"
+                        icon="code_off"
+                        title="Desarrolladores"
+                        description="Con más de 8 años de experiencias en el desarrollo de soluciones informática podrá ahorrar en gastos y tiempo con un equipo local de desarrolladores."
+                    />
                     <div class="col-12">
                         <div class="section-btns justify-content-center">
                             <a href="services.html" class="btn btn-with-icon btn-w240 ripple">
