Cambio de email

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,13 +9,13 @@
                         <li>
                             <a href="mailto:mail@example.com">
                                 <i class="material-icons md-18">mail_outline</i>
-                                <span>mail@example.com</span>
+                                <span>rigon@gmail.com</span>
                             </a>
                         </li>
                         <li>
                             <a href="mailto:mail@example.com" class="formingHrefTel">
                                 <i class="material-icons md-18">phone_in_talk</i>
-                                <span>+1-888-777-1234</span>
+                                <span>+1-888-777-123</span>
                             </a>
                         </li>
                     </ul>
