Cambio en Por que Escogernos?

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                                 <div class="intro-content">
                                     <div class="section-heading shm-none">
                                         <h2>Rigon Multiservices<br /></h2>
-                                        <p class="section-desc">Somos una empresa con amplio dominio tecnológico y amantes de los desafíos...tu mejor asesor tecnológico.</p>
+                                        <p class="section-desc">Somos una empresa con amplio dominio tecnológico, amantes de los desafíos y del desarrollo privado y empresarial...¡¡¡tu mejor asesor tecnológico!!!</p>
                                     </div>
                                     <div class="wrap-btn intro-btns">
                                         <a href="contact-us.html" class="btn btn-with-icon btn-border btn-small ripple">
@@ -44,20 +44,20 @@ import ServiceCard from "../components/ServiceCard.astro";
                     <ServiceCard
                         className="col-lg-4 col-md-6 col-12 item"
                         icon="corporate_fare"
-                        title="Soluciones empresariales"
-                        description="Brindamos asesoramiento tecnológico para que automatiza sus procesos y alcance eficiencia en la gestión de sus clientes y servicios."
+                        title="Soluciones Empresariales"
+                        description="Brindamos asesoramiento tecnológico para que automatices tus procesos y alcances eficiencia en la gestión de sus clientes y servicios."
                     />
                     <ServiceCard
                         className="col-lg-4 col-md-6 col-12 item"
                         icon="design_services"
                         title="Diseño"
-                        description="Diseños frescos y adaptables que elevarán el número de clientes y permitirán su permanencia en el mercado."
+                        description="Diseños frescos, adaptables y renovadores que elevarán el número de clientes y permitirán su permanencia en el mercado."
                     />
                     <ServiceCard
                         className="col-lg-4 col-md-12 col-12 item"
                         icon="code_off"
                         title="Desarrolladores"
-                        description="Con más de 8 años de experiencias en el desarrollo de soluciones informática podrá ahorrar en gastos y tiempo con un equipo local de desarrolladores."
+                        description="Con más de 8 años de experiencias en el desarrollo de soluciones informáticas, ahorrará en gastos y tiempo con un equipo local de desarrolladores especializados."
                     />
                     <div class="col-12">
                         <div class="section-btns justify-content-center">
@@ -85,9 +85,9 @@ import ServiceCard from "../components/ServiceCard.astro";
                         <div class="ini">
                             <div class="ini-count">01</div>
                             <div class="ini-info">
-                                <h3 class="ini-heading item-heading-large">Hardware de alta calidad</h3>
+                                <h3 class="ini-heading item-heading-large">Hardware de última tecnología</h3>
                                 <div class="ini-desc">
-                                    <p>Usamos hardware de primer nivel para desarrollar las aplicaciones más eficientes para nuestros clientes</p>
+                                    <p>Usamos hardware de primer nivel para desarrollar las aplicaciones más eficientes y de fácil manejo para los clientes</p>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +98,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Soporte dedicado 24/7</h3>
                                 <div class="ini-desc">
-                                    <p>Puede confiar en nuestro soporte técnico las 24 horas del día, los 7 días de la semana, que con gusto resolverá cualquier problema que pueda tener.</p>
+                                    <p>Confíe en nuestro soporte técnico, habilitado las 24 horas del día, los 7 días de la semana. Con gusto resolverán cualquier problema que pueda tener.</p>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Estilo de trabajo ágil y rápido</h3>
                                 <div class="ini-desc">
-                                    <p>Este tipo de enfoque de nuestro trabajo ayuda a nuestros especialistas a desarrollar rápidamente mejores productos.</p>
+                                    <p>Nuestro enfoque en el trabajo ayuda a nuestros especialistas a desarrollar rápidamente mejores productos.</p>
                                 </div>
                             </div>
                         </div>
@@ -120,7 +120,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Precios competitivos</h3>
                                 <div class="ini-desc">
-                                    <p>Nuestra misión es elevar el número de clientes que confían en nuestro esfuerzo</p>
+                                    <p>Nuestra misión es perfeccionar nuestro trabajo, logrando confianza y seguridad con los clientes</p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Alto nivel de usabilidad</h3>
                                 <div class="ini-desc">
-                                    <p>Todos nuestros productos tienen una alta usabilidad que permite a los usuarios operar fácilmente las aplicaciones y servicios</p>
+                                    <p>Todos nuestros productos tienen una alta usabilidad, que permite a los usuarios operar fácilmente las aplicaciones y servicios ofertados</p>
                                 </div>
                             </div>
                         </div>
