Cambios en Por que Escogernos?

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,7 +87,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Hardware de última tecnología</h3>
                                 <div class="ini-desc">
-                                    <p>Usamos hardware de primer nivel para desarrollar las aplicaciones más eficientes y de fácil manejo para los clientes</p>
+                                    <p>Usamos hardware de primer nivel para desarrollar las aplicaciones más eficientes y de fácil manejo para los clientes.</p>
                                 </div>
                             </div>
                         </div>
@@ -120,7 +120,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Precios competitivos</h3>
                                 <div class="ini-desc">
-                                    <p>Nuestra misión es perfeccionar nuestro trabajo, logrando confianza y seguridad con los clientes</p>
+                                    <p>Nuestra misión es perfeccionar nuestro trabajo, logrando confianza y seguridad con los clientes.</p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Alto nivel de usabilidad</h3>
                                 <div class="ini-desc">
-                                    <p>Todos nuestros productos tienen una alta usabilidad, que permite a los usuarios operar fácilmente las aplicaciones y servicios ofertados</p>
+                                    <p>Todos nuestros productos tienen una alta usabilidad, que permite a los usuarios operar fácilmente las aplicaciones y servicios ofertados.</p>
                                 </div>
                             </div>
                         </div>
