Cambios de informaion en el Footer e Index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,18 @@ import ServiceCard from "../components/ServiceCard.astro";
                             <div class="ini-info">
                                 <h3 class="ini-heading item-heading-large">Alto nivel de usabilidad</h3>
                                 <div class="ini-desc">
-                                    <p>Todos nuestros productos tienen una alta usabilidad, que permite a los usuarios operar fácilmente las aplicaciones y servicios ofertados.</p>
+                                    <p>Todos nuestros productos tienen una alta usabilidad, permitiendo a los usuarios operarlos fácilmente.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 item">
+                        <div class="ini">
+                            <div class="ini-count">06</div>
+                            <div class="ini-info">
+                                <h3 class="ini-heading item-heading-large">Confianza</h3>
+                                <div class="ini-desc">
+                                    <p>Generamos seguridad y confianza en todos nuestro clientes demostrando nuestras capacidades, talentos y profecionalidad.</p>
                                 </div>
                             </div>
                         </div>
