--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,8 +11,8 @@
                             </a>
                             <div class="footer-company-desc">
                                 <p>
-                                    Nuestra empresa desarrolla software de alta calidad y confiabilidad para las necesidades corporativas desde finales de 2013. Somos reconocidos profesionales del
-                                    desarrollo de software y IT soluciones.
+                                    Nuestra empresa desarrolla software de alta calidad y confiabilidad para las necesidades corporativas desde finales de 2013. Somos un equipo de profesionales del
+                                    desarrollo de software e IT soluciones.
                                 </p>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                                     <a href="#!" class="hover-link" data-title="Asesoramiento tecnológico"><span>Asesoramiento tecnológico</span></a>
                                 </li>
                                 <li>
-                                    <a href="#!" class="hover-link" data-title="Cableado estructurado"><span>Cableado estructurado</span></a>
+                                    <a href="#!" class="hover-link" data-title="Cableado estructurado"><span>Cableado y estructurado</span></a>
                                 </li>
                                 <li>
                                     <a href="#!" class="hover-link" data-title="Sistema CCTV"><span>Sistema CCTV</span></a>
@@ -98,16 +98,16 @@
                         <ul class="footer-contacts">
                             <li>
                                 <i class="material-icons md-22">location_on</i>
-                                <div class="footer-contact-info">301 S Irving Blvd Los Angeles, CA 90020</div>
+                                <div class="footer-contact-info">Santo Domingo, Distrito Nacional, R.D. 10205</div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
-                                <div class="footer-contact-info"><a href="#!" class="formingHrefTel">+1 323-913-4688</a>, <a href="#!" class="formingHrefTel">+1 323-888-4554</a></div>
+                                <div class="footer-contact-info"><a href="#!" class="formingHrefTel">+1 809-893-7641</a>, <a href="#!" class="formingHrefTel">+1 829-966-1186</a></div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:mail@example.com">mail@example.com</a>
+                                    <a href="mailto:rigon@gmail.com">rigon@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
