--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -74,16 +74,16 @@
                     <nav class="main-mnu">
                         <ul class="main-mnu-list">
                             <li>
-                                <a href="index.html" data-title="Inicio"><span>Inicio</span></a>
+                                <a href="/" data-title="Inicio"><span>Inicio</span></a>
                             </li>
                             <li>
-                                <a href="about-us.html" data-title="Quienes somos"><span>Quienes somos</span></a>
+                                <a href="/about-us" data-title="Quienes somos"><span>Quienes somos</span></a>
                             </li>
                             <li>
-                                <a href="services.html" data-title="Services"><span>Servicios</span></a>
+                                <a href="/services" data-title="Servicios"><span>Servicios</span></a>
                             </li>
                             <li>
-                                <a href="contact-us.html" data-title="Contact Us"><span>Contáctanos</span></a>
+                                <a href="/contact-us" data-title="Contact Us"><span>Contáctanos</span></a>
                             </li>
                         </ul>
                     </nav>
