--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
 
         <title>RIGON Multiservices - IT Soluciones</title>
 
-        <meta name="description" content="Description" />
+        <meta name="description" content="RIGON Multiservices - IT Soluciones" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
 
