--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Footer from "../components/Footer.astro";
         <meta name="description" content="RIGON Multiservices - IT Soluciones" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
-
+        <meta property="og:image" content="https://flaviocopes.com/img/avatar.png" />
         <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
 
         <link rel="stylesheet" href="assets/css/libs.css" />
