About/Contact and Service single page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
                     <div class="footer-company-info">
                         <div class="footer-company-top">
                             <a href="/" class="logo" title="PathSoft">
-                                <img data-src="assets/img/logo-trans.png" width="225" height="64" class="lazy" alt="PathSoft" />
+                                <img data-src="/assets/img/logo-trans.png" width="225" height="64" class="lazy" alt="PathSoft" />
                             </a>
                             <div class="footer-company-desc">
                                 <p>
@@ -20,28 +20,28 @@
                             <li>
                                 <a href="#!" title="Facebook">
                                     <svg viewBox="0 0 320 512">
-                                        <use xlink:href="assets/img/sprite.svg#facebook-icon"></use>
+                                        <use xlink:href="/assets/img/sprite.svg#facebook-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="Instagram">
                                     <svg viewBox="0 0 448 512">
-                                        <use xlink:href="assets/img/sprite.svg#instagram-icon"></use>
+                                        <use xlink:href="/assets/img/sprite.svg#instagram-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="LinkedIn">
                                     <svg viewBox="0 0 448 512">
-                                        <use xlink:href="assets/img/sprite.svg#linkedin-icon"></use>
+                                        <use xlink:href="/assets/img/sprite.svg#linkedin-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="Twitter">
                                     <svg viewBox="0 0 512 512">
-                                        <use xlink:href="assets/img/sprite.svg#twitter-icon"></use>
+                                        <use xlink:href="/assets/img/sprite.svg#twitter-icon"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -55,14 +55,14 @@
                         <nav class="footer-nav">
                             <ul class="footer-mnu">
                                 <li>
-                                    <a href="about-us.html" class="hover-link" data-title="Quienes somos"><span>Quienes somos</span></a>
+                                    <a href="/about" class="hover-link" data-title="Quiénes somos"><span>Quiénes somos</span></a>
                                 </li>
                                 <li>
-                                    <a href="services.html" class="hover-link" data-title="Services"><span>Servicios</span></a>
+                                    <a href="/services" class="hover-link" data-title="Services"><span>Servicios</span></a>
                                 </li>
 
                                 <li>
-                                    <a href="contact-us.html" class="hover-link" data-title="Contact Us"><span>Contáctanos</span></a>
+                                    <a href="/contact" class="hover-link" data-title="Contact Us"><span>Contáctanos</span></a>
                                 </li>
                             </ul>
                         </nav>
@@ -74,7 +74,7 @@
                         <nav class="footer-nav">
                             <ul class="footer-mnu">
                                 <li>
-                                    <a href="#!" class="hover-link" data-title="Soluciones informáticas"><span>Soluciones informáticas</span></a>
+                                    <a href="/services" class="hover-link" data-title="Soluciones informáticas"><span>Soluciones informáticas</span></a>
                                 </li>
                                 <li>
                                     <a href="#!" class="hover-link" data-title="Asesoramiento tecnológico"><span>Asesoramiento tecnológico</span></a>
