--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,22 +27,22 @@
                         <ul class="social-links">
                             <li>
                                 <a href="#!" title="Facebook">
-                                    <svg viewBox="0 0 320 512"><use xlink:href="assets/img/sprite.svg#facebook-icon"></use></svg>
+                                    <svg viewBox="0 0 320 512"><use xlink:href="/assets/img/sprite.svg#facebook-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="Instagram">
-                                    <svg viewBox="0 0 448 512"><use xlink:href="assets/img/sprite.svg#instagram-icon"></use></svg>
+                                    <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#instagram-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="LinkedIn">
-                                    <svg viewBox="0 0 448 512"><use xlink:href="assets/img/sprite.svg#linkedin-icon"></use></svg>
+                                    <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#linkedin-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#!" title="Twitter">
-                                    <svg viewBox="0 0 512 512"><use xlink:href="assets/img/sprite.svg#twitter-icon"></use></svg>
+                                    <svg viewBox="0 0 512 512"><use xlink:href="/assets/img/sprite.svg#twitter-icon"></use></svg>
                                 </a>
                             </li>
                         </ul>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-auto header-fixed-col">
                     <!-- Begin logo -->
-                    <a href="/" class="logo" title="PathSoft"> <img src="assets/img/logo.png" width="160" height="64" alt="PathSoft" /></a><!-- End logo -->
+                    <a href="/" class="logo" title="PathSoft"> <img src="/assets/img/logo.png" width="160" height="64" alt="PathSoft" /></a><!-- End logo -->
                 </div>
                 <div class="col-auto header-fixed-col d-none d-lg-block col-static">
                     <!-- Begin main menu -->
@@ -77,13 +77,13 @@
                                 <a href="/" data-title="Inicio"><span>Inicio</span></a>
                             </li>
                             <li>
-                                <a href="/about-us" data-title="Quienes somos"><span>Quienes somos</span></a>
+                                <a href="/about" data-title="Quiénes somos"><span>Quiénes somos</span></a>
                             </li>
                             <li>
                                 <a href="/services" data-title="Servicios"><span>Servicios</span></a>
                             </li>
                             <li>
-                                <a href="/contact-us" data-title="Contact Us"><span>Contáctanos</span></a>
+                                <a href="/contact" data-title="Contáctanos"><span>Contáctanos</span></a>
                             </li>
                         </ul>
                     </nav>
@@ -115,22 +115,22 @@
                                         <ul class="social-links">
                                             <li>
                                                 <a href="#!" title="Facebook">
-                                                    <svg viewBox="0 0 320 512"><use xlink:href="assets/img/sprite.svg#facebook-icon"></use></svg>
+                                                    <svg viewBox="0 0 320 512"><use xlink:href="/assets/img/sprite.svg#facebook-icon"></use></svg>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#!" title="Instagram">
-                                                    <svg viewBox="0 0 448 512"><use xlink:href="assets/img/sprite.svg#instagram-icon"></use></svg>
+                                                    <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#instagram-icon"></use></svg>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#!" title="LinkedIn">
-                                                    <svg viewBox="0 0 448 512"><use xlink:href="assets/img/sprite.svg#linkedin-icon"></use></svg>
+                                                    <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#linkedin-icon"></use></svg>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#!" title="Twitter">
-                                                    <svg viewBox="0 0 512 512"><use xlink:href="assets/img/sprite.svg#twitter-icon"></use></svg>
+                                                    <svg viewBox="0 0 512 512"><use xlink:href="/assets/img/sprite.svg#twitter-icon"></use></svg>
                                                 </a>
                                             </li>
                                         </ul>
