--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,18 +13,17 @@ import Footer from "../components/Footer.astro";
         <meta name="description" content="RIGON Multiservices - IT Soluciones" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
-        <meta property="og:image" content="assets/img/logo.png" />
-        <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
+        <link rel="icon" href="/assets/img/logo.png" type="image/x-icon" />
 
-        <link rel="stylesheet" href="assets/css/libs.css" />
-        <link rel="stylesheet" href="assets/css/style.css" />
-        <link rel="preload" href="assets/fonts/istok-web-v15-latin/istok-web-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="assets/fonts/istok-web-v15-latin/istok-web-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="assets/fonts/montserrat-v15-latin/montserrat-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="assets/fonts/montserrat-v15-latin/montserrat-v15-latin-600.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="stylesheet" href="/assets/css/libs.css" />
+        <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="preload" href="/assets/fonts/istok-web-v15-latin/istok-web-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/assets/fonts/istok-web-v15-latin/istok-web-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/assets/fonts/montserrat-v15-latin/montserrat-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/assets/fonts/montserrat-v15-latin/montserrat-v15-latin-600.woff2" as="font" type="font/woff2" crossorigin />
 
-        <link rel="preload" href="assets/fonts/material-icons/material-icons.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="assets/fonts/material-icons/material-icons-outlined.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/assets/fonts/material-icons/material-icons.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/assets/fonts/material-icons/material-icons-outlined.woff2" as="font" type="font/woff2" crossorigin />
     </head>
     <body>
         <main class="main">
@@ -32,10 +31,10 @@ import Footer from "../components/Footer.astro";
                 <nav class="mmm">
                     <div class="mmm-content">
                         <ul class="mmm-list">
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="about-us.html">Quienes somos</a></li>
-                            <li><a href="services.html">Servicios</a></li>
-                            <li><a href="contact-us.html">Contáctanos</a></li>
+                            <li><a href="/">Inicio</a></li>
+                            <li><a href="/about">Quiénes somos</a></li>
+                            <li><a href="/services">Servicios</a></li>
+                            <li><a href="/contact">Contáctanos</a></li>
                         </ul>
                     </div>
                 </nav>
