--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,18 +1,51 @@
 ---
 import Layout from "../layouts/Layout.astro";
-const name = "About";
+import ServiceCard from "../components/ServiceCard.astro";
+import services from "../data/services.json";
 ---
 
-<Layout title="About">
-    <div>
-        <p>
-            {name}
-        </p>
+<Layout title="Services">
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading heading-center">
+                        <h1>Quiénes somos</h1>
+                    </div>
+                    <div class="content">
+                        <div class="img-style">
+                            <img src="assets/img/about-img.jpg" alt="" />
+                        </div>
+                        <h2>Developing High-quality Apps</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>
+                            Welcome to our wonderful world. We sincerely hope that each and every user entering our website will find exactly what he/she is looking for. With advanced features of
+                            activating account and new login widgets, you will definitely have a great experience of using our web page. It will tell you lots of interesting things about our company,
+                            its products and services, highly professional staff and happy customers. Our site design and navigation has been thoroughly thought out. The layout is aesthetically
+                            appealing, contains concise texts in order not to take your precious time. Text styling allows scanning the pages quickly. Site navigation is extremely intuitive and
+                            user-friendly. You will always know where you are now and will be able to skip from one page to another with a single mouse click. We use only trusted, verified content.
+                        </p>
+                        <h3>Providing Reliable Software</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                        <p>
+                            Welcome to our wonderful world. We sincerely hope that each and every user entering our website will find exactly what he/she is looking for. With advanced features of
+                            activating account and new login widgets, you will definitely have a great experience of using our web page. It will tell you lots of interesting things about our company,
+                            its products and services, highly professional staff and happy customers. Our site design and navigation has been thoroughly thought out. The layout is aesthetically
+                            appealing, contains concise texts in order not to take your precious time. Text styling allows scanning the pages quickly. Site navigation is extremely intuitive and
+                            user-friendly. You will always know where you are now and will be able to skip from one page to another with a single mouse click. We use only trusted, verified content.
+                        </p>
+                        <h3>Supporting Our Clients</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </Layout>
-
-<style>
-    div {
-        padding-top: 5%;
-    }
-</style>
