--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import services from "../data/services.json";
                                     <div class="wrap-btn intro-btns">
                                         <a href="/contact" class="btn btn-with-icon btn-border btn-small ripple">
                                             <span>Contáctanos</span>
-                                            <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
+                                            <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="/assets/img/sprite.svg#arrow-right"></use></svg>
                                         </a>
                                     </div>
                                 </div>
@@ -50,7 +50,7 @@ import services from "../data/services.json";
                         <div class="section-btns justify-content-center">
                             <a href="/services" class="btn btn-with-icon btn-w240 ripple">
                                 <span>Otros Servicios</span>
-                                <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
+                                <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="/assets/img/sprite.svg#arrow-right"></use></svg>
                             </a>
                         </div>
                     </div>
